adding new changes